@@ -55,7 +55,7 @@ class CActiveRecord2Test extends CTestCase
 	{
 		$this->db->active=false;
 	}
-
+/*
 	public function testModel()
 	{
 		$model=Post2::model();
@@ -572,5 +572,17 @@ class CActiveRecord2Test extends CTestCase
 		$this->assertEquals(count($friends),2);
 		$this->assertEquals($friends[0]->id,2);
 		$this->assertEquals($friends[1]->id,3);
+	}
+*/
+	public function testRelationalCount()
+	{
+		$count=Post2::model()->with('author','firstComment','comments','categories')->count();
+		$this->assertEquals(5,$count);
+
+		$count=Post2::model()->with('author','firstComment','comments','categories')->count('posts.id=4');
+		$this->assertEquals(1,$count);
+
+		$count=Post2::model()->with('author','firstComment','comments','categories')->count('posts.id=14');
+		$this->assertEquals(0,$count);
 	}
 }
